_manifests/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: smitchell-blog
spec:
  selector:
    app: smitchell-blog
    tier: frontend
    instance: frontend
  ports:
    - protocol: TCP
      port: 80
      name: web
